# svitava-gui

./: Makefile  README.md  config.ini  pyproject.toml  svitava-gui.bat  svitava-gui.sh
src/: __init__.py  configuration.py  renderer.py  svitava-gui.py  version.py
src/gui/: canvas.py  icons.py  main_window.py  menubar.py  status_bar.py  toolbar.py  tooltip.py
src/gui/dialogs/: __init__.py  about_dialog.py  color_mapper_dialog.py  complex_fractal_type_dialog.py  dynamic_fractal_type_dialog.py  filter_type_dialog.py  fractal_type_dialog.py  help_dialog.py  ifs_fractal_type_dialog.py  l_system_fractal_type_dialog.py  pattern_type_dialog.py  settings_dialog.py
tools/: run_pycodestyle.py
